--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pope Francis $POPE</title>
-
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="images/favicon-128x128.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="images/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="images/favicon-16x16.png"
+		/>
 		<link rel="stylesheet" href="styles/style.css" />
 	</head>
 	<body>
